syntax="proto3";

package decvault.shard_store;

option go_package = "github.com/decvault/shard_store/api;shard_store";

service ShardStore {
  rpc GetShards(GetShardsRequest) returns (GetShardsResponse);
  rpc PutShards(PutShardsRequest) returns (PutShardsResponse);
}

message GetShardsRequest {
  string secret_id = 1;
  repeated uint32 shard_ids = 2;
}

message GetShardsResponse {
  map<uint32, bytes> shards = 1;
}

message PutShardsRequest {
  string secret_id = 1;
  map<uint32, bytes> shards = 2;
}

message PutShardsResponse {}
